--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,8 @@
           </a>
           <a class="nav-title" href="#" style="color: white; padding: 15px; display: inline-block;">主题在线构建工具</a>
         </div>
-        <div id="echarts-navbar-collapse" class="navbar-right">
-          <a href="index_en.html" class="navbar-brand">EN</a>
+        <div class="navbar-right">
+          <a href="index_en.html" class="navbar-brand" style="color: white; font-size: 12px;">EN</a>
         </div>
         <!-- <div id="echarts-navbar-collapse" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
