feat: update favicon

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     })();
     </script>
 
-    <link rel="shortcut icon" href="http://echarts.baidu.com/images/favicon.png">
+    <link rel="shortcut icon" href="https://echarts.apache.org/zh/images/favicon.png">
     <link rel="stylesheet" href="styles/main.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
