refactor: update directory

--- a/app/zh/index.html
+++ b/app/zh/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <link rel="shortcut icon" href="https://echarts.apache.org/zh/images/favicon.png">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,7 +55,7 @@
           <a class="nav-title" href="#" style="color: white; padding: 15px; display: inline-block;">主题在线构建工具</a>
         </div>
         <div class="navbar-right">
-          <a href="index_en.html" class="navbar-brand" style="color: white; font-size: 12px;">EN</a>
+          <a href="../en" class="navbar-brand" style="color: white; font-size: 12px;">EN</a>
         </div>
         <!-- <div id="echarts-navbar-collapse" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -574,9 +574,9 @@
 
     </div>
 
-    <script src="vendors/echarts.min.js"></script>
-    <script src="vendors/vendors.min.js"></script>
+    <script src="../vendors/echarts.min.js"></script>
+    <script src="../vendors/vendors.min.js"></script>
 
-    <script src="scripts/app.min.js"></script>
+    <script src="./app.min.js"></script>
   </body>
 </html>
