--- a/app/en/index.html
+++ b/app/en/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <link rel="shortcut icon" href="https://echarts.apache.org/en/images/favicon.png">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,7 +55,7 @@
           <a class="nav-title" href="#" style="color: white; padding: 15px; display: inline-block;">Theme Online Build Tool</a>
         </div>
         <div class="navbar-right">
-          <a href="index.html" class="navbar-brand" style="color: white; font-size: 12px;">中文</a>
+          <a href="../zh" class="navbar-brand" style="color: white; font-size: 12px;">中文</a>
         </div>
         <!-- <div id="echarts-navbar-collapse" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -92,7 +92,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#acc-port" href="#acc-port-body">Function</a>
+                    <a data-toggle="collapse" data-parent="#acc-port" href="#acc-port-body">Basic</a>
                   </h4>
                 </div>
                 <div id="acc-port-body" class="panel-collapse collapse in">
@@ -574,9 +574,9 @@
 
     </div>
 
-    <script src="vendors/echarts.min.js"></script>
-    <script src="vendors/vendors.min.js"></script>
+    <script src="../vendors/echarts.min.js"></script>
+    <script src="../vendors/vendors.min.js"></script>
 
-    <script src="scripts/app_en.min.js"></script>
+    <script src="./app.min.js"></script>
   </body>
 </html>
