--- a/app/en/body.html
+++ b/app/en/body.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/css/bootstrap-colorpicker.min.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/default.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/github.css">
-<link rel="stylesheet" href="./main.css">
+<link rel="stylesheet" href="./theme-builder/main.css">
 
 <div id="theme-builder">
   <div class="container-fluid" id="content">
@@ -504,4 +504,4 @@
 <script src="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/highlight.pack.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
 
-<script src="./app.min.js"></script>
+<script src="./theme-builder/app.min.js"></script>
