--- a/app/zh/body.html
+++ b/app/zh/body.html
@@ -1,8 +1,7 @@
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/css/bootstrap-colorpicker.min.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/default.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/github.css">
-<link rel="stylesheet" href="./main.css">
+<link rel="stylesheet" href="./theme-builder/main.css">
 
 <div id="theme-builder">
   <div class="container-fluid" id="content">
@@ -497,11 +496,9 @@
 
 <script src="//cdn.jsdelivr.net/npm/echarts@4/dist/echarts.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/js/bootstrap-colorpicker.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/vue@1.0.28/dist/vue.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/highlight.pack.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
 
-<script src="./app.min.js"></script>
+<script src="./theme-builder/app.min.js"></script>
