--- a/app/zh/body.html
+++ b/app/zh/body.html
@@ -231,7 +231,7 @@
           </div>
         </div><!-- end of acc-timeline -->
 
-        <div id="acc-datazoom" class="panel-group">
+        <!-- <div id="acc-datazoom" class="panel-group">
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
@@ -251,7 +251,8 @@
               </div>
             </div>
           </div>
-        </div><!-- end of acc-datazoom -->
+        </div> -->
+        <!-- end of acc-datazoom -->
 
         <div id="acc-line" class="panel-group">
           <div class="panel panel-default">
@@ -509,7 +510,7 @@
 
 </div>
 
-<script src="//cdn.jsdelivr.net/npm/echarts@4/dist/echarts.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/js/bootstrap-colorpicker.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/vue@1.0.28/dist/vue.min.js"></script>
