--- a/app/en/body.html
+++ b/app/en/body.html
@@ -510,7 +510,7 @@
 
 </div>
 
-<script src="//cdn.jsdelivr.net/npm/echarts@5/dist/echarts-en.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/js/bootstrap-colorpicker.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/vue@1.0.28/dist/vue.min.js"></script>
