--- a/app/zh/body.html
+++ b/app/zh/body.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/css/bootstrap-colorpicker.min.css">
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/default.css">
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/github.css">
+<link rel="stylesheet" href="https://lib.baomitu.com/bootstrap-colorpicker/2.5.3/css/bootstrap-colorpicker.min.css">
+<link rel="stylesheet" href="https://lib.baomitu.com/highlight.js/9.16.2/styles/default.min.css">
+<link rel="stylesheet" href="https://lib.baomitu.com/highlight.js/9.16.2/styles/github.min.css">
 <link rel="stylesheet" href="./theme-builder/main.css">
 
 <div id="theme-builder">
@@ -510,11 +510,11 @@
 
 </div>
 
-<script src="//cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/js/bootstrap-colorpicker.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/vue@1.0.28/dist/vue.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/highlight.pack.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
+<script src="https://registry.npmmirror.com/echarts/5/files/dist/echarts.min.js"></script>
+<script src="https://lib.baomitu.com/lodash.js/4.17.21/lodash.min.js"></script>
+<script src="https://lib.baomitu.com/bootstrap-colorpicker/2.5.3/js/bootstrap-colorpicker.min.js"></script>
+<script src="https://lib.baomitu.com/vue/1.0.28/vue.min.js"></script>
+<script src="https://lib.baomitu.com/highlight.js/9.16.2/highlight.min.js"></script>
+<script src="https://lib.baomitu.com/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
 <script src="./theme-builder/app.min.js"></script>
