--- a/app/zh/body.html
+++ b/app/zh/body.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="https://lib.baomitu.com/bootstrap-colorpicker/2.5.3/css/bootstrap-colorpicker.min.css">
-<link rel="stylesheet" href="https://lib.baomitu.com/highlight.js/9.16.2/styles/default.min.css">
-<link rel="stylesheet" href="https://lib.baomitu.com/highlight.js/9.16.2/styles/github.min.css">
+<link rel="stylesheet" href="https://echarts.apache.org/zh/js/vendors/bootstrap-colorpicker@2.5.3/css/bootstrap-colorpicker.min.css">
+<link rel="stylesheet" href="https://echarts.apache.org/zh/js/vendors/highlightjs/cdn-release@11.8.0/build/styles/default.min.css">
+<link rel="stylesheet" href="https://echarts.apache.org/zh/js/vendors/highlightjs/cdn-release@11.8.0/build/styles/github.min.css">
 <link rel="stylesheet" href="./theme-builder/main.css">
 
 <div id="theme-builder">
@@ -510,11 +510,11 @@
 
 </div>
 
-<script src="https://registry.npmmirror.com/echarts/5/files/dist/echarts.min.js"></script>
-<script src="https://lib.baomitu.com/lodash.js/4.17.21/lodash.min.js"></script>
-<script src="https://lib.baomitu.com/bootstrap-colorpicker/2.5.3/js/bootstrap-colorpicker.min.js"></script>
-<script src="https://lib.baomitu.com/vue/1.0.28/vue.min.js"></script>
-<script src="https://lib.baomitu.com/highlight.js/9.16.2/highlight.min.js"></script>
-<script src="https://lib.baomitu.com/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+<script src="https://echarts.apache.org/zh/js/vendors/echarts/dist/echarts.min.js"></script>
+<script src="https://echarts.apache.org/zh/js/vendors/lodash@3.10.1/lodash.min.js"></script>
+<script src="https://echarts.apache.org/zh/js/vendors/bootstrap-colorpicker@2.5.3/js/bootstrap-colorpicker.min.js"></script>
+<script src="https://echarts.apache.org/zh/js/vendors/vue@2.6.14/vue.min.js"></script>
+<script src="https://echarts.apache.org/zh/js/vendors/highlightjs/cdn-release@11.8.0/build/highlight.min.js"></script>
+<script src="https://echarts.apache.org/zh/js/vendors/file-saver@2.0.5/FileSaver.min.js"></script>
 
 <script src="./theme-builder/app.min.js"></script>
