--- a/app/en/body.html
+++ b/app/en/body.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/css/bootstrap-colorpicker.min.css">
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/default.css">
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/styles/github.css">
+<link rel="stylesheet" href="https://echarts.apache.org/en/js/vendors/bootstrap-colorpicker@2.5.3/css/bootstrap-colorpicker.min.css">
+<link rel="stylesheet" href="https://echarts.apache.org/en/js/vendors/highlightjs/cdn-release@11.8.0/build/styles/default.min.css">
+<link rel="stylesheet" href="https://echarts.apache.org/en/js/vendors/highlightjs/cdn-release@11.8.0/build/styles/github.min.css">
 <link rel="stylesheet" href="./theme-builder/main.css">
 
 <div id="theme-builder">
@@ -510,11 +510,11 @@
 
 </div>
 
-<script src="//cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/bootstrap-colorpicker@2.5.3/dist/js/bootstrap-colorpicker.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/vue@1.0.28/dist/vue.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/highlightjs@9.16.2/highlight.pack.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
+<script src="https://echarts.apache.org/en/js/vendors/echarts/dist/echarts.min.js"></script>
+<script src="https://echarts.apache.org/en/js/vendors/lodash@3.10.1/lodash.min.js"></script>
+<script src="https://echarts.apache.org/en/js/vendors/bootstrap-colorpicker@2.5.3/js/bootstrap-colorpicker.min.js"></script>
+<script src="https://echarts.apache.org/en/js/vendors/vue@2.6.14/vue.min.js"></script>
+<script src="https://echarts.apache.org/en/js/vendors/highlightjs/cdn-release@11.8.0/build/highlight.min.js"></script>
+<script src="https://echarts.apache.org/en/js/vendors/file-saver@2.0.5/FileSaver.min.js"></script>
 
 <script src="./theme-builder/app.min.js"></script>
