--- a/app/en/body.html
+++ b/app/en/body.html
@@ -68,7 +68,7 @@
                   <hr />
                   <h5>Default Themes</h5>
                   <div class="row theme-plan-row">
-                    <div class="col-xs-6" v-for="group in preDefinedThemes">
+                    <div class="col-xs-6" v-for="(group, $index) in preDefinedThemes">
                       <a class="theme-plan-group" @click="selectPreDefinedTheme($index)" v-bind:style="{ backgroundColor: group.background }" title="{{ group.name }}">
                         <div class="theme-plan-color" v-for="color in group.theme" v-bind:style="{ backgroundColor: color }">
                         </div>
@@ -137,7 +137,7 @@
                       <label for="axisSeperateSetting" class="control-label">Change Config For Each Axis Type</label>
                     </div>
                   </div>
-                  <div class="axis-group" v-for="axis in theme.axis" v-if="$index > 0 || !theme.axisSeperateSetting">
+                  <div class="axis-group" v-for="(axis, $index) in theme.axis" v-if="$index > 0 || !theme.axisSeperateSetting">
                     <h5 v-if="axis.type !== 'all'">{{ axis.type }}</h5>
                     <config-color can-disable :enabled.sync="axis.axisLineShow" title="Line" :color.sync="axis.axisLineColor"></config-color>
                     <config-color can-disable :enabled.sync="axis.axisTickShow" title="Tick" :color.sync="axis.axisTickColor"></config-color>
