refactor: basic layouot

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <link rel="shortcut icon" href="https://echarts.apache.org/zh/images/favicon.png?_v_=20240226">
+    <title>Apache ECharts Theme Builder</title>
   </head>
   <body>
     <div id="app"></div>
