feat: add debounce; fix background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Apache ECharts Theme Builder</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="theme-builder"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
