--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="https://echarts.apache.org/zh/images/favicon.png?_v_=20240226">
+    <link rel="shortcut icon" href="https://echarts.apache.org/en/images/favicon.png">
     <title>Apache ECharts Theme Builder</title>
+    <style>
+      /* only for dev environment */
+      html, body {
+        height: 100%;
+        margin: 0;
+      }
+    </style>
+    <!-- include echarts CDN lib if NOT IN dev environment -->
+    %VITE_EXTERNAL_ECHARTS_SCRIPT%
+    <script>
+      // show language selector in dev/preview environment
+      window.SHOW_LANGUAGE_SELECTOR = true;
+    </script>
   </head>
   <body>
-    <div id="theme-builder"></div>
+    <div id="theme-builder-app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
